# talog

./: .gitignore  .http  Cargo.toml  LICENSE  README.md  config.json  config.v  config.yaml  log.txt  log_config.json  main.v  tagging_log.v  talog_test.v  v.mod
core/: Cargo.toml  bucket.v  index.v  indexer.v  query.v  service.v  service_test.v  tag.v  trie.v
core/meta/: index_mapping.v  type.v
core/models/: bucket.v  json_log.v  tag.v  trie.v  trie_test.v
core/src/: index.rs  lib.rs  meta_data.rs  service.rs
core/structs/: bucket.v  log.v  shard.v  shard_test.v  tag.v  trie.v  trie_test.v
docs/: index.md  index_cn.md  vlang_disadvantages.md  vlang_disadvantages_cn.md  why_vlang.md  why_vlang_cn.md
examples/vector/: config.yaml
extension/: index.v  search.v
meta/: Cargo.toml
meta/src/: lib.rs
models/: request.v  result.v
public/: index.html  login.html
public/js/: common.js  index.js  index_mapping.js  metric.js  pageview.js  query_log.js  setting.js
rest/: index.http  index.v  search.v  server.v
talog/: Cargo.toml
talog-core/: Cargo.toml
talog-core/src/: bucket.rs  file.rs  index.rs  lib.rs  meta.rs  service.rs  shard.rs  tag.rs
talog-macros/: Cargo.toml
talog-macros/src/: lib.rs
talog/src/: admin.rs  index.rs  jwt.rs  layers.rs  main.rs  models.rs  search.rs  server.rs
watch/: config.v  file.v  file_test.v  indexer.v  rule.v
web/: .http  compress_test.v  crypto.v  index.http  ip.v  server.v
zmq/: server.v
