[package]
name = "talog-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
fexpr = "0.1.2"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.29"
talog-macros = { path = "../talog-macros" }
md-5 = "0.11.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
struct_iterable = "0.1.1"
regex = "1.12.3"
