[package]
name = "talog-core"
version = "0.1.0"
edition = "2024"
description = "A tiny and simple log solution, talog tag logs to store data in a simple way, so it can be quickly queried"
license = "MIT"

[dependencies]
chrono = "0.4.44"
fexpr = { version = "0.1.0", package = "fexpr-utf8" }
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.29"
talog-macros = "0.1.0"
md-5 = "0.11.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
