[package]
name = "talog"
version = "0.1.0"
edition = "2024"

[dependencies]
talog-core = { path = "../talog-core" }
tokio = { version = "1.52.0", features = ["full"] }
tokio-macros = "2.7.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [] }
tracing-appender = "0.2.4"
log = "0.4.29"
axum = "0.8.9"
chrono = "0.4.44"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
cidr = "0.3.2"
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "fs"] }
serde_json = "1.0.149"
md-5 = "0.11.0"
hex = "0.4.3"
